--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^3.1.5
   freezed_annotation: ^1.1.0
   file_picker: ^4.3.0
+  json_annotation: ^4.4.0
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +53,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   freezed: ^1.1.0
   build_runner: ^2.1.7
+  json_serializable: ^6.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
