--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   freezed_annotation: ^1.1.0
   file_picker: ^4.3.0
   json_annotation: ^4.4.0
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
